<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gift"
    android:orientation="vertical"
    android:focusable="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="16dp"
        android:background="#00704545"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textColorHighlight="#FFEBEE"
        android:textColorLink="#FFEBEE"
        android:textSize="70dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/layout_motion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="70dp"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <Button
                android:id="@+id/sign_up"
                style="@android:style/Widget.Button"
                android:layout_width="fill_parent"
                android:layout_height="58dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:nextFocusDown="@+id/sign_up"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <Button
                android:id="@+id/sign_in"
                android:layout_width="fill_parent"
                android:layout_height="58dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:nextFocusDown="@+id/sign_in"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

        </LinearLayout>
    </RelativeLayout>



</RelativeLayout>