<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:background="@drawable/gift"
    tools:context=".buyNowActivity">

    <include layout="@layout/my_app_bar_layout" />
    <ImageView
        android:id="@+id/giftpic"
        android:layout_width="fill_parent"
        android:layout_height="180dp"

        android:nextFocusDown="@+id/giftpic"
        android:layout_margin="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/buynow"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:text="@string/buy_now"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/buy_now"
            android:onClick="readIt"
            />


        <Button
            android:id="@+id/add_later"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/buy_later"
            android:gravity="center"
            android:text="@string/buy_later"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/add_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/add_fav"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/giftdesc"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:textColor="#FFEBEE"
        android:textSize="18sp"
        android:textStyle="bold" />



</LinearLayout>